@@ -1,15 +1,4 @@
-- test im_blend, including new n-band cond + n-band a/b mode
-
-- do the same to im_ifthenelse
-
-- should we bandup then/else too? could have
-
-	4 band cond
-	1 band then
-	4 band else
-
-  I guess
-
+- do im_ifthenelse
 
 
 - we have tools/ and contrib/ argh
