@@ -45,6 +45,7 @@
 - renamed im_eorconst() as im_eorimage_const() for consistency, also and, or
 - relational revised: smaller, more general, faster
 - im_blend() allows many-band conditional, 1-band then/else
+- im_blend() allows band and format to differ between then and else parts
 
 25/3/09 started 7.18.0
 - revised version numbers
